force-app/main/default/objects/Currency2__c/Currency2__c.object-meta.xml
<CustomObject>
    <label>Currency</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Currency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>