force-app/main/default/objects/Currency2__c/fields/ConversionRate__c.field-meta.xml
<CustomField>
    <fullName>ConversionRate__c</fullName>
    <label>ConversionRate</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>