force-app/main/default/objects/Currency2__c/fields/IsCorporate__c.field-meta.xml
<CustomField>
    <fullName>IsCorporate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCorporate</label>
    <type>Checkbox</type>
</CustomField>