force-app/main/default/objects/Currency2__c/fields/IsoCode__c.field-meta.xml
<CustomField>
    <fullName>IsoCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>IsoCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>